[project]
name = "langsmith-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "WM-igarashi-naoki", email = "138097270+WM-igarashi-naoki@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langsmith_demo"]
