[project]
name = "langsmith-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "WM-igarashi-naoki", email = "138097270+WM-igarashi-naoki@users.noreply.github.com" }
]
dependencies = [
    "langchain-openai>=0.3.18",
    "langchain-core>=0.3.63",
    "langgraph>=0.4.8",
    "openevals>=0.1.0",
    "langchain-community>=0.3.24",
    "beautifulsoup4>=4.13.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langsmith_demo"]
